Issue: #FT-3247 Component: Changes: 1. Fix issue "Grid Slider overlaps on Basemap Tool"

--- a/TripfinderWeb/TripfinderWeb/Global/Css/Routingmap.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/Routingmap.less
@@ -1583,10 +1583,6 @@ html {
 }
 
 .off-map-tool {
-	&.active {
-		z-index: 1000;
-	}
-
 	.thematic-menu {
 		z-index: 19999;
 		width: 185px;
